# qa-ai-agent

./: .gitignore  README.md  agent.py  check_console.py  dashboard.py  debug_upload.py  out.txt  out_utf8.txt  pyproject.toml  requirements.txt
.github/workflows/: ai-ci.yml  codex-review.yml
auth/: sample_auth_state.json
benchmarks/: real_site_suite.sample.json
configs/: example_urls.txt
configs/prompt_templates/: .template_user_notes.json  basic_smoke.txt  global_balanced.txt  global_performance_stability.txt  global_regression.txt  security_bug_profile.txt  (+1 more)
core/: ai_engine.py  artifacts.py  benchmark.py  confidence.py  config.py  contradictions.py  dashboard_data.py  executor.py  feedback_bank.py  guardrails.py  instruction_templates.py  jobs.py  ontology.py  planner.py  policy_pack.py  result_analyzer.py  run_context.py  safety_gates.py  scanner.py  self_critique.py  site_profiles.py  utils.py
instructions/: auth_focus.txt  basic_smoke.txt  content_focus.txt  global_accessibility_baseline.txt  global_data_integrity.txt  global_error_resilience.txt  global_exploratory.txt  global_release_readiness.txt  global_risk_first.txt  phone_focus.txt
tests/: test_agent.py  test_ai_engine_normalization.py  test_basic.py  test_benchmark.py  test_confidence.py  test_contradictions.py  test_core.py  test_dashboard_app.py  test_dashboard_data.py  test_e2e_api.py  test_executor.py  test_guardrails.py  test_infra.py  test_instruction_templates.py  test_integrity.py  test_planner.py  test_result_analyzer.py  test_scanner.py  test_site_profiles.py
website/: dashboard.py
(+91 files in other folders)
