[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "qa-ai-agent"
version = "0.1.0"
description = "AI-assisted website scanner, QA scenario generator, and execution dashboard."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4",
    "Flask",
    "google-genai",
    "Pillow",
    "playwright",
    "python-dotenv",
    "requests",
    "rich",
]

[project.scripts]
qa-ai-agent = "agent:main"
qa-ai-dashboard = "dashboard:main"

[tool.setuptools]
py-modules = ["agent", "dashboard"]

[tool.setuptools.packages.find]
include = ["core*", "test_case_generator*", "end_to_end_automation*", "visual_regression_testing*"]
